--- a/index.html
+++ b/index.html
@@ -138,37 +138,37 @@ about_section:
         </div>
         <div class="tab-content col-6 d-flex align-items-center" id="serviceTabContent">
             <div class="tab-pane fade show active fs-2 " id="personal-injury-content" role="tabpanel" aria-labelledby="personal-injury-tab">
-                <p class="editable fs-4" style="text-align: justify">
+                <p class="editable fs-4 col-xl-10" style="text-align: justify">
                 If you were injured through no fault of your own and need help navigating through the legal system contact us immediately. When dealing with these difficult, fragile matters, you will need an attorney with not only experience, but with compassion. Someone who will take a personal interest in your case and have your best interest in mind.
                 </p>
                 <a href="/personal-injury" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="criminal-law-content" role="tabpanel" aria-labelledby="criminal-law-tab">
-                <p class="editable fs-4" style="text-align: justify">
+                <p class="editable fs-4 col-xl-10" style="text-align: justify">
                 Our firm offers criminal defense services to those charged with having committed a crime. We take representation of a client very seriously as we understand the emotional toll placed on a person and their family when someone has been accused and/or charged with committing a crime. Our firm works tirelessly from the moment we are contacted by a client or their family, be it the day they are arrested or the week before trial.
                 </p>
                 <a href="/criminal-law" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
              <div class="tab-pane fade fs-2" id="family-law-content" role="tabpanel" aria-labelledby="family-law-tab">
-                 <p class="editable fs-4" style="text-align: justify">
+                 <p class="editable fs-4 col-xl-10" style="text-align: justify">
                  We realize that extended litigation should be a last alternative in resolving a domestic or family dispute. We work to achieve our clients goals with the least emotional and financial expense.
                  </p>
                  <a href="/family-law" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="dwi-owi-content" role="tabpanel" aria-labelledby="dwi-owi-tab">
-                <p class="editable fs-4" style="text-align: justify">
+                <p class="editable fs-4 col-xl-10" style="text-align: justify">
                 If you have been arrested for driving under the influence of alcohol or drugs, it is imperative that you contact my office immediately. DUI cases can develop relatively quick, and the more time that I have to gather the facts, the better the case I can build to defend you.
                 </p>
                 <a href="/dwi-owi" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="estate-content" role="tabpanel" aria-labelledby="estate-tab">
-                <p class="editable fs-4" style="text-align: justify">
+                <p class="editable fs-4 col-xl-10" style="text-align: justify">
                 Call today to set up an appointment so that I can help you plan for your future so that your wishes can be carried out.
                 </p>
                 <a href="/estate-planning" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="additional-services-content" role="tabpanel" aria-labelledby="additional-services-tab">
-                <p class="editable fs-4" style="text-align: justify">
+                <p class="editable fs-4 col-xl-10" style="text-align: justify">
                 We pride ourselves on being a full service law firm and strive to fulfill our clients needs. Should you have a problem and/or dispute not specifically delineated above, please feel free to contact my office for a consultation.
                 </p>
                 <a href="/additional-services" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
