Footer/ subpages bugfixing, added about me button for mccormick area on index.html

--- a/_pages/dwi-owi.html
+++ b/_pages/dwi-owi.html
@@ -132,8 +132,8 @@ services_section:
     <div>
         <div class="d-flex flex-row py-lg-4">
             <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
-                <div class="d-flex col-xl-9 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-5" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+                <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-4 px-lg-5" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
