--- a/_pages/criminal-law.html
+++ b/_pages/criminal-law.html
@@ -213,7 +213,7 @@ services_section:
         <div class="d-flex flex-row py-lg-4">
             <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
                 <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-4 px-lg-4" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-4 px-lg-5" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
@@ -279,12 +279,12 @@ services_section:
             <img src="{{ sectionContact.banner_image_url }}" class="img-fluid">
         </div>
     </div>
-    <div class="py-4 d-flex justify-content-center">
-        <h3 class="d-flex f-weight-500 display-1 lh-1 px-2 col-10" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+    <div class="py-4 d-flex justify-content-center col-12 col-md-12">
+        <h3 class="d-flex f-weight-500 display-2 lh-1 px-4 px-md-3 col-10 col-md-11" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
     </div>
     <div class=" ">
         <div class="pb-3 px-5 ">
-            <p class="f-weight-500 d-flex fs-1 px-3" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
+            <p class="f-weight-500 d-flex fs-1 px-3 px-md-3" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
         </div>
         <div class="py-5 px-3" style="background-color: #eef2f3;">
             <p class="f-weight-500 fs-1 px-5" style="color: #0e161e; text-align: justify;">{{sectionPREFOOTER.title}}</p>
