--- a/_pages/legal-services.html
+++ b/_pages/legal-services.html
@@ -448,10 +448,10 @@ additional_services_section:
 <!--MOBILE VERSION-->
 
 <section class="container-fluid mx-0 px-0 d-block d-lg-none ">
-    <div class="allServices__Service"></div>
+    <div class="allServices__Service p-0"></div>
     {% assign sectionTwo = page.personal_injury_section %}
-        <div class="">
-            <div class="py-2 px-2 px-md-5">
+        <div class="" style="background-image: url(/assets/images/about_big_bg.jpg);background-size: cover; ">
+            <div class="py-2 px-0 pt-5 pe-5 pb-5">
               <div class="allServices__Service__Text px-5">
                  {% if sectionTwo.title %}
                   <h3 class="section-title py-4 px-2 px-sm-4 px-md-4">{{ sectionTwo.title }}</h3>
@@ -480,8 +480,8 @@ additional_services_section:
 
 <!--    SECTION CRIMINAL HERE-->
 
-        <div class="">
-            <div class="py-2 px-2 px-md-5">
+        <div class="" style="background-image: url(/assets/images/gallery_05.jpg);background-size: cover; ">
+            <div class="py-2 px-0 pt-5 pe-5 pb-5">
               <div class="allServices__Service__Text px-5">
                  {% if sectionThree.title %}
                   <h3 class="section-title py-4 px-2 px-sm-4 px-md-4">{{ sectionThree.title }}</h3>
@@ -510,8 +510,8 @@ additional_services_section:
 
 <!--    SECTION FAMILY HERE-->
 
-        <div class="">
-            <div class="py-2 px-2 px-md-5">
+        <div class="" style="background-image: url(/assets/images/banner_8.jpg);background-size: cover; ">
+            <div class="py-2 px-0 pt-5 pe-5 pb-5">
               <div class="allServices__Service__Text px-5">
                  {% if sectionFour.title %}
                   <h3 class="section-title py-4 px-2 px-sm-4 px-md-4">{{ sectionFour.title }}</h3>
@@ -541,8 +541,8 @@ additional_services_section:
 
 <!--    SECTION DWI/OWI HERE-->
 
-        <div class="">
-            <div class="py-2 px-2 px-md-5">
+        <div class="" style="background-image: url(/assets/images/banner_5.jpg);background-size: cover; ">
+            <div class="py-2 px-0 pt-5 pe-5 pb-5">
               <div class="allServices__Service__Text px-5">
                  {% if sectionFive.title %}
                   <h3 class="section-title py-4 px-2 px-sm-4 px-md-4">{{ sectionFive.title }}</h3>
@@ -571,8 +571,8 @@ additional_services_section:
         </div>
 
 <!--    SECTION ESTATE HERE-->
-        <div class="">
-            <div class="py-2 px-2 px-md-5">
+        <div class="" style="background-image: url(/assets/images/gallery_06.jpg);background-size: cover; ">
+            <div class="py-2 px-0 pt-5 pe-5 pb-5">
               <div class="allServices__Service__Text px-5">
                  {% if sectionSix.title %}
                   <h3 class="section-title py-4 px-2 px-sm-4 px-md-4">{{ sectionSix.title }}</h3>
@@ -600,8 +600,8 @@ additional_services_section:
         </div>
 
 <!--    SECTION ADDITIONAL HERE-->
-          <div class="">
-            <div class="py-2 px-2 px-md-5">
+          <div class="" style="background-image: url(/assets/images/banner_one.jpg);background-size: cover; ">
+            <div class="py-2 px-0 pt-5 pe-5 pb-5">
               <div class="allServices__Service__Text px-5">
                  {% if sectionSeven.title %}
                   <h3 class="section-title py-4 px-2 px-sm-4 px-md-4">{{ sectionSeven.title }}</h3>
@@ -627,4 +627,10 @@ additional_services_section:
               </div>
           </div>
         </div>
+</section>
+<section class=" order-2">
+    <div class="col-10 d-flex justify-content-center justify-content-lg-start text-start px-5 mx-2 pt-5">
+        <h5 class="text-success text-uppercase display-3 f-weight-500 d-block d-lg-none">request a consultation</h5>
+        <h5 class="text-success text-uppercase fs-3 f-weight-500 d-none d-lg-block">request a consultation</h5>
+    </div>
 </section>
