--- a/index.html
+++ b/index.html
@@ -325,21 +325,27 @@ about_section:
 
 <div class="d-none d-lg-block">
     <div class="row justify-content-between me-0">
-        <div class=" col-8 d-flex py-5">
+        <div class=" col-8 d-flex d-lg-none d-xl-flex py-5">
             {% if about.background_image %}
-            <img src="{{ about.background_image }}" alt="paper" class="img-fluid py-5">
+            <img src="{{ about.background_image }}" alt="paper" class="img-fluid py-5 object-fit-cover h-75 w-100 ">
             {% endif %}
         </div>
-        <div class="col-7 px-5 py-5 position-relative mt-n5" style="background: linear-gradient(180deg, rgba(116,22,37,.9), rgba(58,11,19,.9)); margin-left: -30%;">
-            <div class="px-5 py-5">
+        <div class="  col-8 d-lg-flex d-none d-xl-none py-5">
+            {% if about.background_image %}
+            <img src="{{ about.background_image }}" alt="paper" class="img-fluid py-5 object-fit-cover h-100 w-100">
+            {% endif %}
+        </div>
+        <div class="d-flex col-7 px-5 py-lg-5 py-xl-0 " style="background: linear-gradient(180deg, rgba(116,22,37,.9), rgba(58,11,19,.9)); margin-left: -30%;">
+            <div class="flex-column px-5 pt-xl-5">
                 <div class="d-flex col-3 border-0 py-3">
                     <img src="/assets/images/about_sm.jpg?_cchid=23ecf755b0243d1bb7a93a2eb5b67d9d" alt="SHANE MCCORMICK" class="object-fit-cover rounded-circle" style="width: 138px; height: 138px;">
                 </div>
-                <div class="display-5 text-white col-lg-10 col-xl-10"> SHANE MCCORMICK
-                    <p class="fs-3 py-3 col-11 editable">
+                <div class="display-5 text-white col-lg-11 col-xl-10"> SHANE MCCORMICK
+                    <p class="fs-3 py-3 col-11 col-lg-12 col-xl-11 editable" style="text-align: justify">
                         Shane McCormick has over 20 years of legal experience fighting for diverse clients. As a veteran, he knows the importance of persistence and determination. He brings all these valuable skills to the courtroom to ensure the best possible outcome for every client, every time. A local attorney who knows the system, he has been providing outstanding legal services to Acadiana and the surrounding area since 2002.
                     </p>
                 </div>
+                <a href="/about" class="btn btn-primary btn-lg rounded-0 learn-more-white-btn px-5 py-3 fs-5 mt-3" role="button">LEARN MORE </a>
             </div>
         </div>
     </div>
