--- a/_pages/estate-planning.html
+++ b/_pages/estate-planning.html
@@ -10,9 +10,9 @@ permalink: "/estate-planning"
 banner_section:
   title: "Estate Planning"
   lists:
-    WILL <br>
-    POWER OF ATTORNEY <br>
-    LIVING WILL <br>
+    WILL <br><br>
+    POWER OF ATTORNEY <br><br>
+    LIVING WILL <br><br>
     SUCCESSION
   banner_image_url: "/assets/images/banner_planning.jpg"
 
@@ -78,14 +78,14 @@ services_section:
               <div class="col pt-5">
                   {% if page.banner_section.title %}
                   <div class="d-flex justify-content-around">
-                      <H1 class="col-10 text-white py-1 font-title editable text-uppercase">{{page.banner_section.title}}</H1>
+                      <h1 class="col-10 text-white py-1 font-title editable text-uppercase">{{page.banner_section.title}}</h1>
                   </div>
                   {% endif %}
               </div>
               <div class="col-12 d-flex justify-content-center">
                   {% if page.banner_section.lists %}
                   <div class="col-10">
-                      <p class="text-white font-size-3rem f-weight-500 editable ">{{ page.banner_section.lists }}</p>
+                      <p class="text-white font-size-3rem f-weight-500 editable lh-1">{{ page.banner_section.lists }}</p>
                   </div>
                   {% endif %}
               </div>
@@ -195,7 +195,7 @@ services_section:
         </div>
     </div>
     <div class="py-4 d-flex justify-content-center">
-        <h3 class="d-flex f-weight-500 display-1 lh-1 px-2 col-10" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+        <h3 class="d-flex f-weight-500 display-2 lh-1 px-3 px-md-3 col-10 col-md-11" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
     </div>
     <div class=" ">
         <div class="pb-3 px-5 ">
