--- a/_pages/dwi-owi.html
+++ b/_pages/dwi-owi.html
@@ -191,12 +191,12 @@ services_section:
             <img src="{{ sectionContact.banner_image_url }}" class="img-fluid">
         </div>
     </div>
-    <div class="py-4 d-flex justify-content-center">
-        <h3 class="d-flex f-weight-500 display-2 lh-1 px-2 col-10" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+    <div class="py-4 d-flex justify-content-center col-md-12">
+        <h3 class="d-flex f-weight-500 display-2 lh-1 px-2 col-10 col-md-11" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
     </div>
     <div class=" ">
         <div class="pb-3 px-5 ">
-            <p class="f-weight-500 d-flex fs-1 px-3" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
+            <p class="f-weight-500 d-flex fs-1 px-2 px-md-3 col-md-12" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
         </div>
         <div class="py-5 px-3" style="background-color: #eef2f3;">
             <p class="f-weight-500 fs-1 px-5" style="color: #0e161e; text-align: justify;">{{sectionPREFOOTER.title}}</p>
