--- a/_pages/family-law.html
+++ b/_pages/family-law.html
@@ -9,10 +9,10 @@ keywords: >-
 permalink: "/family-law"
 banner_section:
   title: "Family Law"
-  lists:
-     - DIVORCE
-     - CUSTODY
-     - CHILD SUPPORT
+  lists: >-
+      DIVORCE<br>
+      CUSTODY<br>
+      CHILD SUPPORT
   banner_image_url: "/assets/images/banner_2.jpg"
 
 contact_section:
@@ -88,7 +88,7 @@ services_section:
               <div class="col-12 d-flex justify-content-center">
                   {% if page.banner_section.lists %}
                   <div class="col-10">
-                      <p class="text-white font-size-3rem f-weight-500 editable ">{% for item in page.banner_section.lists %} {{ item }} <br /> {% endfor %}</p>
+                      <p class="text-white font-size-3rem f-weight-500 editable lh-lg">{% for item in page.banner_section.lists %} {{ item }} <br /> {% endfor %}</p>
                   </div>
                   {% endif %}
               </div>
@@ -197,8 +197,8 @@ services_section:
             <img src="{{ sectionContact.banner_image_url }}" class="img-fluid">
         </div>
     </div>
-    <div class="py-4 d-flex justify-content-center">
-        <h3 class="d-flex f-weight-500 display-1 lh-1 px-2 col-10" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+    <div class="py-4 d-flex justify-content-center col-11 col-md-12">
+        <h3 class="d-flex f-weight-500 display-2 lh-1 px-0 px-md-2 col-9 col-md-11" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
     </div>
     <div class=" ">
         <div class="pb-3 px-5 ">
