--- a/_pages/personal-injury.html
+++ b/_pages/personal-injury.html
@@ -208,7 +208,7 @@ services_section:
         </div>
         {% endfor %}
         <div class="d-flex pb-3 px-5 px-md-3">
-            <p class="f-weight-500 d-flex fs-1 px-3 px-md-5" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
+            <p class="d-flex f-weight-500 display-2 lh-1 px-3 px-md-2 col-md-11 col-10 pe-5 pe-md-0 px-md-3" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
         </div>
         <div class="py-5 px-3" style="background-color: #eef2f3;">
             <p class="f-weight-500 fs-1 px-5" style="color: #0e161e; text-align: justify;">{{sectionPREFOOTER.title}}</p>
