Updated 4 files via CloudCannon.

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -128,9 +128,9 @@ one_column_section: >-
 				</div>
 			</section>
 			<section class=" ">
+			  	<script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
 				<form action="https://formspree.io/f/mkndnqlr" method="POST"
 					  class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-12 col-xl-10 px-5 px-xl-0 pe-xl-5">
-					<script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
 					<script>
 						grecaptcha.ready(function() {
 							grecaptcha.execute('6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo', {action: 'submit'}).then(function (token) {
@@ -155,9 +155,10 @@ one_column_section: >-
 							<textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: #eef2f3;;" required></textarea>
 						</div>
 						<input class="g-recaptcha-response" name="g-recaptcha-response" type="hidden">
-						<input type="submit" class="d-none d-lg-block ms-lg-auto text-uppercase fs-3 py-3 px-4 text-white bg-success" value="submit" />
+						<input type="submit" class="d-none d-lg-block ms-lg-auto text-uppercase fs-3 py-3 px-4 text-white bg-success" value="Submit" />
 					</div>
 				</form>
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		</section>
 		</div>
 		<div class="d-flex flex-column col-4 col-xl-3 px-0 align-self-">
