--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -67,12 +67,13 @@ contact_form_subtitle: "REQUEST A CONSULTATION"
 											<textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" required></textarea>
 										</div>
 										<input class="g-recaptcha-response" name="g-recaptcha-response" type="hidden">
-										<input type="submit" class="d-block d-lg-block ms-lg-auto formSubmit-Desktop" value="submit" />
+										<input type="submit" class="d-block d-lg-block ms-lg-auto formSubmit-Desktop" value="Submit" />
 									</div>
 								</div>
 							</form>
 						</div>
 					</div>
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 				</div>
 			</section>
 		</div>
